--- a/index.html
+++ b/index.html
@@ -1,36 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-    <link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-    <script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
-    <link rel="stylesheet" href="owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="owl-carousel/owl.theme.default.min.css">
-    <script src="owl-carousel/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clmm.Me Hệ thống chẵn lẻ MoMo tự động Giao Dịch 24/7 </title>
+    <link rel="apple-touch-icon" href="https://clmm.me/assets/logo-momo.jpg">
+    <link rel="shortcut icon" href="https://clmm.me/assets/logo-momo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/assets/css2/bootstrap.min.css?x">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css?x">
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/assets/css2/style.css?x">
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/assets/js/libs/css/ui-lightness/jquery-ui-1.9.2.custom.min.css?x">
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/assets/css2/custom.1.css?x">
+    <link rel="stylesheet" href="https://clmm.me/assets/css/bootstrap-social.css?x">
+    <link rel="stylesheet" href="https://clmm.me/assets/css/animate.min.css?x">
+    <script src="https://clmm.me/frontend-user/assets/js/libs/jquery-1.10.1.min.js?c"></script>
     <script>
-        new WOW().init();
+        let color = {};
+        color['C'] = 'f44336';
+        color['L'] = '9c27b0';
+        color['T'] = '3f51b5';
+        color['X'] = '03a9f4';
+        color['C2'] = '4caf50';
+        color['L2'] = 'e74c3c';
+        color['T2'] = '8a6d3b';
+        color['X2'] = 'ad4105';
+        color['G3'] = '38416c';
+        color['N1'] = 'ccc';
+        color['N2'] = 'a35858';
+        color['N3'] = '81bfff';
     </script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+    <script src="https://clmm.me/quay.js?Since04_=Nczuvccccvsv%3E" type="text/javascript"></script>
+    <script src="https://clmm.me/assets/since04.js?Since04_DN=sxHffgggdcfyvggfccgc" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/c.css?x?vip" >
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/frontend-admin/app-assets/vendors/css/editors/quill/katex.min.css?x">
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/frontend-admin/app-assets/vendors/css/editors/quill/monokai-sublime.min.css?x">
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/frontend-admin/app-assets/vendors/css/editors/quill/quill.snow.css?x">
+    <link rel="stylesheet" href="https://clmm.me/frontend-user/frontend-admin/app-assets/vendors/css/editors/quill/quill.bubble.css?x">
+    <link rel="stylesheet" href="https://clmm.me/assets/css/bootstrap-datetimepicker.min.css?x">
+    <link rel="stylesheet" type="text/css" href="https://clmm.me/frontend-user/frontend-admin/app-assets/vendors/css/extensions/sweetalert2.min.css?x">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VL3B5CTH2B"></script>
+<script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', 'G-VL3B5CTH2B');
+        </script>
 
-    <meta charset="utf-8">
-    <title>Index</title>
+
 </head>
 <body>
- 
-    // web page content
-    <div>   
-
-    </div>      
 </body>
+<script>
+    $(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()});$(document).ready(function(){$("button[data-action=huongdan]").click((e)=>{$("#myModal").modal("show")});$("span[data-action=phan-thuong]").click((e)=>{$("#modalGift").modal("show")});$('button[server-action=change]').click(function(){let button=$(this);let id=button.attr('server-id');selection_server=id;selection_rate=button.attr('server-rate');$('.turn').removeClass('active');$(`.turn[turn-tab=${id}]`).addClass('active');$('button[server-action=change]').attr('class','btn btn-default');button.attr('class','btn btn-primary')});$('button[bot-action=change]').click(function(){let button=$(this);let id=button.attr('bot-id');$('.bot').removeClass('active');$(`.bot[bot-tab=${id}]`).addClass('active');$('button[bot-action=change]').attr('class','btn btn-default');button.attr('class','btn btn-primary')});$('button[server-id=1000]').click();$('button[bot-id=1000]').click()})
+</script>
+<script src="https://clmm.me/frontend-user/assets/js/libs/jquery-ui-1.9.2.custom.min.js?c"></script>
+<script src="https://clmm.me/frontend-user/assets/js/jquery.validate.min.js?c"></script>
+<script src="https://clmm.me/frontend-user/assets/js/libs/bootstrap.min.js?s"></script>
+<script src="https://clmm.me/frontend-user/assets/js/bootbox.js?a"></script>
+<script src="https://clmm.me/frontend-user/assets/js/tip.js?q"></script>
+<script src="https://clmm.me/frontend-user/assets/js/alert.js?abcdcx"></script>
+<script src="https://clmm.me/assets/js/moment.min.js?a"></script>
+<script src="https://clmm.me/assets/js/bootstrap-datetimepicker.min.js?f"></script>
+<script src="https://clmm.me/frontend-user/frontend-admin/app-assets/vendors/js/extensions/sweetalert2.all.min.js?a"></script>
 </html>
